# extract-python

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.gitea/workflows/: build.yaml
.github/: CODEOWNERS
.github/workflows/: linting.yml  publish-extract-core.yml  publish-extract-python.yml  publish.yml  tests-extract-core.yml  tests-extract-python.yml  tests.yml
benches/: compare.ipynb  compare.py  constants.py
extract-core/: pyproject.toml
extract-core/extract_core/: __init__.py  configs.py  docling_.py  marker_.py  miner_u.py  objects.py  pipeline.py  utils.py
extract-core/tests/: test_docling.py  test_objects.py
extract-python/: pyproject.toml
extract-python/benches/: __init__.py  compare.ipynb  compare.py
extract-python/extract_python/: __init__.py  constants.py  docling_.py  marker_.py  miner_u.py  utils.py
extract-python/tests/: conftest.py  test_docling.py  test_marker.py  test_miner_u.py
extract_python/: __init__.py  app.py  config.py  constants.py  docling_.py  marker_.py  miner_u.py  objects.py  pipeline.py  utils.py
extract_python/benches/: __init__.py  compare.py  constants.py
extract_python/core/: __init__.py  docling_.py  marker_.py  miner_u.py  pipeline.py  utils.py
extract_python/tasks/: dependencies.py
scripts/: lock.sh
tests/: conftest.py  test_docling.py  test_marker.py  test_miner_u.py  test_objects.py  test_tasks.py
tests/core/: test_docling.py  test_marker.py  test_miner_u.py
