[project]
name = "extract-python"
version = "0.1.0"
description = "Structured content extraction"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "icij-worker[amqp,postgres]~=0.17.21",
  "pydantic-settings~=2.8.1",
  "torch>=2.6,<2.9.0.dev20250901",
  "torchvision>=0.23,<0.24.0.dev20250901",
]

[tool.hatch.build.targets.sdist]
include = ["icij_worker"]

[project.optional-dependencies]
benches = [
    "html2image~=2.0.7",
    "markdown2>=2.5.4",
    "notebook>=7.4.5",
    "pypdfium2>=4.30.0",
]

docling = [
  "docling~=2.26",
  "docling[tesserocr]~=2.26; 'tesseract' in extra",
  "docling[rapidocr]~=2.26; 'rapidocr' in extra",
  "docling[ocrmac]~=2.26; sys_platform == 'darwin'",
  "pytorch-triton-xpu~=3.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

marker = [
  "marker-pdf>=1.6.2",
]

mineru = [
  "mineru[core]~=2.1",
  "pydantic-extra-types>=2.10.5",
  "pycountry>=24.6.1",
]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux'",
]
conflicts = [
    [
        { extra = "mineru" },
        { extra = "marker" },
    ]
]


[dependency-groups]
dev = [
  "pytest~=8.3.5",
  "pytest-asyncio~=0.25.3",
]

[project.urls]
Homepage = "https://github.com/ICIJ/extract-python"
Repository = "https://github.com/ICIJ/extract-python"
Issues = "https://github.com/ICIJ/extract-python/issues"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu-nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/nightly/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-xpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine != 'x86_64'" },
  { index = "pytorch-cpu-nightly", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "pytorch-xpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine != 'x86_64'" },
  { index = "pytorch-cpu-nightly", marker = "sys_platform == 'darwin'" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine != 'x86_64'" },
  { index = "pytorch-cpu-nightly", marker = "sys_platform == 'darwin'" },
]

[project.entry-points."icij_worker.APP_HOOK"]
extract_app = "extract_python.app:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s][%(asctime)s.%(msecs)03d][%(name)s]: %(message)s"
markers = [
  "integration: integration test",
  "miner_u: minerU test which require conflicting extras",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
