[project]
name = "extract-python"
version = "0.1.0"
description = "Structured content extraction"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "icij-common~=0.8.2",
]

[tool.hatch.build.targets.sdist]
include = ["extract_python"]

[project.optional-dependencies]
benches = [
  "html2image~=2.0.7",
  "markdown2>=2.5.4",
  "notebook>=7.4.5",
  "pypdfium2>=4.30.0",
]

docling = [
  "docling-slim[standard,feat-ocr-easyocr,feat-ocr-tesserocr,feat-ocr-mac]~=2.96",
]

marker = [
  "marker-pdf~=1.10",
]

mineru = [
  "mineru[pipeline,vlm]~=3.2",
  "mineru[mlx]~=3.2; sys_platform == 'darwin'",
  "pydantic-extra-types[pycountry]~=2.11",
]

[tool.uv]
conflicts = [
    [
      { extra = "marker" },
      { extra = "mineru" },
    ],
]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux'",
]


[dependency-groups]
dev = [
  "pytest~=8.3.5",
  "pytest-asyncio~=0.25.3",
]

[project.urls]
Homepage = "https://github.com/ICIJ/extract-python"
Repository = "https://github.com/ICIJ/extract-python"
Issues = "https://github.com/ICIJ/extract-python/issues"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s][%(asctime)s.%(msecs)03d][%(name)s]: %(message)s"
markers = [
  "integration: integration test",
  "miner_u: minerU test which require conflicting extras",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
