[project]
name = "extract-core"
dynamic = ["version"]
description = "Core of extract-python"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "docling-slim~=2.96",
  "icij-common~=0.8.2",
  "pydantic~=2.13",
  "marker-pdf~=1.10",
  "mineru~=3.2",
  "pydantic-extra-types[pycountry]>=2.11.1",
]

[tool.uv]
package = true
override-dependencies = [
  "certifi~=2024.12",
  "pillow~=11.3",
  "transformers~=5.1"
]

exclude-dependencies = [
  "anthropic",
  "fast-langdetect",
  "fastapi",
  "google-genai",
  "magika",
  "pdftext",
  "pypdf",
  "pypptx-with-oxml",
  "opencv-python",
  "surya-ocr",
  "uvicorn",
  "cuda-bindings",
  "cuda-pathfinder",
  "cuda-toolkit",
  "fsspec",
  "jinja2",
  "markupsafe",
  "networkx",
  "nvidia-cublas",
  "nvidia-cuda-cupti",
  "nvidia-cuda-nvrtc",
  "nvidia-cuda-runtime",
  "nvidia-cudnn-cu13",
  "nvidia-cufft",
  "nvidia-cufile",
  "nvidia-curand",
  "nvidia-cusolver",
  "nvidia-cusparse",
  "nvidia-cusparselt-cu13",
  "nvidia-nccl-cu13",
  "nvidia-nvjitlink",
  "nvidia-nvshmem-cu13",
  "nvidia-nvtx",
  "triton",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu"},
]
torchvision = [
  { index = "pytorch-cpu"},
]

[dependency-groups]
dev = [
  "docling~=2.96",
  "docling-slim[models-vlm-inline]~=2.96",
  "mpmath~=1.3.0",
  "pytest~=8.3.5",
  "pytest-asyncio~=0.25.3",
  "sympy~=1.14.0",
  "ruff==0.15.2",
  "torch==2.12.0",
  "torchvision==0.27.0",
]

[project.urls]
Homepage = "https://github.com/ICIJ/extract-python"
Repository = "https://github.com/ICIJ/extract-python"
Issues = "https://github.com/ICIJ/extract-python/issues"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s][%(asctime)s.%(msecs)03d][%(name)s]: %(message)s"
markers = []

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["extract_core"]

[tool.hatch.build.targets.sdist]
exclude = [
  "tests",
]
[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
pattern-prefix = "extract-core-"
pattern = "default-unprefixed"
